--- a/style.css
+++ b/style.css
@@ -5,88 +5,140 @@
   src: url(/assets/Norse-Bold.otf)
 }
 
-*, *:after, *:before {
+*, *:before, *:after {
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-
-  font-family: "Open Sans", sans-serif;
-  display: grid;
-  height: 100vh;
-  grid-template: 1fr / 50% 50%;
+html, body {
+    margin: 0;
+    padding: 0;
+    
+    font-family: "Open Sans", sans-serif;
 }
 
-.container:first-child {
-  background: url("/assets/luke-stackpoole-5Qqkjn4PFPA-unsplash.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+.left-col {
+    background-image: url("https://images.unsplash.com/photo-1605190587727-519a8020dbf6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
 
-.container {
-  background: #EEE;
-  padding: 1em
+.logo-container {
+    background: rgba(0, 0, 0, .7);
+    display: flex;    
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    /* bottom: 0; */
+    left: 0;
+    right: 0;
 }
 
-.form {
-  padding-top: 5em;
+.logo {
+    font-family: Nordic-Bold;
+    margin: 0;
+    color: #FFF;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+}
+
+.logo > span {
+    font-family: "Open Sans", sans-serif;
+}
+
+.logo-img {
+    width: 20px;
+    margin: 0 1em; 
+}
+
+/*Input Box  */
+.form-container {
+    background: rgba(0, 0, 0, .6);
+    padding: 3em;
+    position: absolute;
+    margin: 0 auto;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 form {
-  background: #FFF;
-  border-radius: 1em;
-  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  max-width: 280px;
+  margin: auto auto;
+  margin-top: 3em;
 }
 
-.fieldinput {
-  display: grid;
-  grid-template: repeat(3, 1fr)/repeat(2, 1fr);
-  /* padding: 1em; */
-  background: #FFF;
+.input-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 1em;
 }
 
-.input {
-  margin-bottom: 1em;
-}
 
 label {
-  display: block;
-  font-size: 10px;
-  font-weight: 700;
-  color: #222;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  padding-left: .2rem;
+    font-size: .8rem;
+    letter-spacing: 1px;
+    margin-bottom: .5rem;    
+    margin-left: .3rem;
+    color: #EEE;    
 }
 
 input {
-  border: 1px solid #999;
-  width: 250px;
-  padding: .5em 1em;
-  border-radius: 5px;
-  margin-top: .5em;
+    border: none;
+    padding: .7em 1em;
+    border-radius: .5em;
+    color: #333;
 }
 
-button {
-  padding: 1em 2.5em;
-  background: rgb(5, 97, 121);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  margin-top: 1em;
+input:focus {
+    outline: none;
+    border: none;
+    background: #EFEFEF;
 }
 
-input:valid {
-  border: 2px solid lightgreen;
+.btn {
+    border: none;
+    background: lightblue;
+    padding: 1em 2em;
+    border-radius: .5em;
+    font-weight: 700;
+    margin-top: .5em;
+    transition: all 150ms;
 }
 
-h2 {
-  margin-top: 0;
+.btn:hover, .btn:focus {
+    transform: scale(1.05);
+    background: lightskyblue;
 }
 
 .login {
-  font-size: 12px;
+    font-size: .8rem;
+    text-align: center;
+    letter-spacing: 1px;
+    color: #FFF;
+}
+
+.login > a {
+    color: lightseagreen;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+a:visited {
+    color: lightgreen;
+    text-decoration: underline;
+}
+
+
+@media (min-width: 700px) {
+  form {
+    max-width: 400px;
+  }
 }
